--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
@@ -51,12 +51,12 @@
 				        <li><label><input value="csmMqttFlag"  type="checkbox" onclick='showHideColumn(this, this.value);' >服务器标识</label></li>
 				        <li><label><input value="csmSuperSim"  type="checkbox" onclick='showHideColumn(this, this.value);' >超级手机号</label></li>
 				        <li><label><input value="csmV2" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >硬件版本</label></li>
-				        <li><label><input value="csmV3" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >DVD当前版本</label></li>
-				        <li><label><input value="csmV3To" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >DVD最新版本</label></li>
+				        <li><label><input value="csmV3"  type="checkbox" onclick='showHideColumn(this, this.value);' >DVD当前版本</label></li>
+				        <li><label><input value="csmV3To"  type="checkbox" onclick='showHideColumn(this, this.value);' >DVD最新版本</label></li>
 				        <li><label><input value="csmSuitText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >适配车型</label></li>
 				        <li><label><input value="csmTlV1" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >软件版本</label></li>
 				        <li><label><input value="csmTlV2" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >分时租赁版本</label></li>
-				        <li><label><input value="csmNetType" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络类型</label></li>
+				        <li><label><input value="csmNetType"  type="checkbox" onclick='showHideColumn(this, this.value);' >网络类型</label></li>
 				        <li><label><input value="csmProTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端协议</label></li>
 				        <li><label><input value="csmBaudRate" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >CAN1波特率</label></li>
 				        <li><label><input value="csmRemark"  type="checkbox" onclick='showHideColumn(this, this.value);' >备注信息</label></li>
@@ -193,12 +193,9 @@
 	  		,{field: "csmBluetoothMac", title: "蓝牙地址", width: 110, sort:true}
 	  		,{field: "csmBluetoothPsd", title: "蓝牙密码", width: 110, sort:true}
 	  		,{field: "csmV2", title: "硬件版本", width: 110, sort:true}
-	  		,{field: "csmV3", title: "DVD当前版本", width: 110, sort:true}
-	  		,{field: "csmV3To", title: "DVD最新版本", width: 110, sort:true}
 	  		,{field: "csmSuitText", title: "适配车型", width: 110, sort:true}
 	  		,{field: "csmTlV1", title: "软件版本", width: 110, sort:true}
 	  		,{field: "csmTlV2", title: "分时租赁版本", width: 110, sort:true}
-	  		,{field: "csmNetType", title: "网络类型", width: 110, sort:true}
 	  		,{field: "csmProTypeText", title: "终端协议", width: 110, sort:true}
 	  		,{field: "csmBaudRate", title: "CAN1波特率", width: 110, sort:true}
 	  		,{field: "csmUpdateTime", title: "修改时间", width: 110, sort:true}
