--- a/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
@@ -25,40 +25,39 @@
 					<ul class="dropdown-menu tableMenu showHideMenu" role="menu">
 				        <li><label><input value="cssId" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >编号</label></li>
 				        <li><label><input value="cssAccessText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >接入商</label></li>
-				        <li><label><input value="cssHost" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >子域</label></li>
+				        <li><label><input value="cssHost"  type="checkbox" onclick='showHideColumn(this, this.value);' >子域</label></li>
 				        <li><label><input value="cssNumberText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车机号</label></li>
 				        <li><label><input value="cssCarText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车辆</label></li>
 				        <li><label><input value="cssAddTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >接收时间</label></li>
-				        <li><label><input value="cssCurrentTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >TBox时间</label></li>
-				        <li><label><input value="cssRented" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >租赁状态</label></li>
+				        <li><label><input value="cssCurrentTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >报文时间</label></li>
+				        <li><label><input value="cssRented"  type="checkbox" onclick='showHideColumn(this, this.value);' >租赁状态</label></li>
 				        <li><label><input value="cssWarn" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >报警码</label></li>
-				        <li><label><input value="cssRfid" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >RFID卡号</label></li>
-				        <li><label><input value="cssRfidDte" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >用户RFID</label></li>
+				        <li><label><input value="cssRfid"  type="checkbox" onclick='showHideColumn(this, this.value);' >RFID卡号</label></li>
+				        <li><label><input value="cssRfidDte"  type="checkbox" onclick='showHideColumn(this, this.value);' >用户RFID</label></li>
 				        <li><label><input value="cssObdMile" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >累计里程</label></li>
 				        <li><label><input value="cssEngineT" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机温度</label></li>
-				        <li><label><input value="cssMileage" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单总里程</label></li>
+				        <li><label><input value="cssMileage"  type="checkbox" onclick='showHideColumn(this, this.value);' >订单总里程</label></li>
 				        <li><label><input value="cssSpeed" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车速</label></li>
 				        <li><label><input value="cssMotor" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >转速</label></li>
 				        <li><label><input value="cssOil" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >燃油量:</label></li>
 				        <li><label><input value="cssPower" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >小电瓶电量</label></li>
 				        <li><label><input value="cssEvBattery" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >SOC</label></li>
 				        <li><label><input value="cssCharging" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >充电状态</label></li>
-				        <li><label><input value="cssFuelMileage" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单油里程</label></li>
-				        <li><label><input value="cssElectricMileage" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >订单电里程</label></li>
+				        <li><label><input value="cssFuelMileage"  type="checkbox" onclick='showHideColumn(this, this.value);' >订单油里程</label></li>
+				        <li><label><input value="cssElectricMileage"  type="checkbox" onclick='showHideColumn(this, this.value);' >订单电里程</label></li>
 				        <li><label><input value="cssEndurance" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >续航里程</label></li>
 				        <li><label><input value="cssTemperature" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >温度</label></li>
 				        <li><label><input value="cssCsq" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >CSQ</label></li>
-				        <li><label><input value="cssPowerConsumption" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >功耗</label></li>
 				        <li><label><input value="cssLongitude" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >经度</label></li>
 				        <li><label><input value="cssLatitude" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >纬度</label></li>
 				        <li><label><input value="cssGpsValidText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >GPS有效性</label></li>
 				        <li><label><input value="cssGpsCn" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >GPS强度</label></li>
 				        <li><label><input value="cssGpsCount" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >GPS卫星数</label></li>
 				        <li><label><input value="cssDir" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >方向角</label></li>
-				        <li><label><input value="cssCircularText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >循环模式</label></li>
-				        <li><label><input value="cssPtcText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >PTC启停</label></li>
-				        <li><label><input value="cssCompresText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >压缩机</label></li>
-				        <li><label><input value="cssFanText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >档风量</label></li>
+				        <li><label><input value="cssCircularText"  type="checkbox" onclick='showHideColumn(this, this.value);' >循环模式</label></li>
+				        <li><label><input value="cssPtcText"  type="checkbox" onclick='showHideColumn(this, this.value);' >PTC启停</label></li>
+				        <li><label><input value="cssCompresText"  type="checkbox" onclick='showHideColumn(this, this.value);' >压缩机</label></li>
+				        <li><label><input value="cssFanText"  type="checkbox" onclick='showHideColumn(this, this.value);' >档风量</label></li>
 				        <li><label><input value="cssSavingText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >功耗模式</label></li>
 				        <li><label><input value="cssDoor" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >车门状态</label></li>
 				        <li><label><input value="cssEngineText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >发动机状态</label></li>
@@ -141,40 +140,28 @@
 	var clms = [{checkbox: true}
 	  		,{field: "cssId", title: "编号", width: 110, sort:true}
 	  		,{field: "cssAccessText", title: "接入商", width: 110, sort:true}
-	  		,{field: "cssHost", title: "子域", width: 110, sort:true}
 	  		,{field: "cssNumberText", title: "车机号", width: 110, sort:true}
 	  		,{field: "cssCarText", title: "车辆", width: 110, sort:true}
 	  		,{field: "cssAddTime", title: "接收时间", width: 110, sort:true}
-	  		,{field: "cssCurrentTime", title: "TBox时间", width: 110, sort:true}
-	  		,{field: "cssRented", title: "租赁状态", width: 110, sort:true}
+	  		,{field: "cssCurrentTime", title: "报文时间", width: 110, sort:true}
 	  		,{field: "cssWarn", title: "报警码", width: 110, sort:true}
-	  		,{field: "cssRfid", title: "RFID卡号", width: 110, sort:true}
-	  		,{field: "cssRfidDte", title: "用户RFID", width: 110, sort:true}
 	  		,{field: "cssObdMile", title: "累计里程", width: 110, sort:true}
 	  		,{field: "cssEngineT", title: "发动机温度", width: 110, sort:true}
-	  		,{field: "cssMileage", title: "订单总里程", width: 110, sort:true}
 	  		,{field: "cssSpeed", title: "车速", width: 110, sort:true}
 	  		,{field: "cssMotor", title: "转速", width: 110, sort:true}
 	  		,{field: "cssOil", title: "燃油量:", width: 110, sort:true}
 	  		,{field: "cssPower", title: "小电瓶电量", width: 110, sort:true}
 	  		,{field: "cssEvBattery", title: "SOC", width: 110, sort:true}
 	  		,{field: "cssCharging", title: "充电状态", width: 110, sort:true}
-	  		,{field: "cssFuelMileage", title: "订单油里程", width: 110, sort:true}
-	  		,{field: "cssElectricMileage", title: "订单电里程", width: 110, sort:true}
 	  		,{field: "cssEndurance", title: "续航里程", width: 110, sort:true}
 	  		,{field: "cssTemperature", title: "温度", width: 110, sort:true}
 	  		,{field: "cssCsq", title: "CSQ", width: 110, sort:true}
-	  		,{field: "cssPowerConsumption", title: "功耗", width: 110, sort:true}
 	  		,{field: "cssLongitude", title: "经度", width: 110, sort:true}
 	  		,{field: "cssLatitude", title: "纬度", width: 110, sort:true}
 	  		,{field: "cssGpsValidText", title: "GPS有效性", width: 110, sort:true}
 	  		,{field: "cssGpsCn", title: "GPS强度", width: 110, sort:true}
 	  		,{field: "cssGpsCount", title: "GPS卫星数", width: 110, sort:true}
 	  		,{field: "cssDir", title: "方向角", width: 110, sort:true}
-	  		,{field: "cssCircularText", title: "循环模式", width: 110, sort:true}
-	  		,{field: "cssPtcText", title: "PTC启停", width: 110, sort:true}
-	  		,{field: "cssCompresText", title: "压缩机", width: 110, sort:true}
-	  		,{field: "cssFanText", title: "档风量", width: 110, sort:true}
 	  		,{field: "cssSavingText", title: "功耗模式", width: 110, sort:true}
 	  		,{field: "cssDoor", title: "车门状态", width: 110, sort:true}
 	  		,{field: "cssEngineText", title: "发动机状态", width: 110, sort:true}
