--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -65,10 +65,10 @@
 							</a>
 							<ul class="nav nav-second-level">
 								<li>
-									<a class="J_menuItem" href="admin/vehicle/index.html">车辆管理</a>
+									<a class="J_menuItem" href="admin/model/index.html">车型管理</a>
 								</li>
 								<li>
-									<a class="J_menuItem" href="admin/model/index.html">车型管理</a>
+									<a class="J_menuItem" href="admin/vehicle/index.html?v=2">车辆管理</a>
 								</li>
 							</ul>
 						</li>
@@ -89,12 +89,31 @@
 						<li>
 							<a href="#">
 								<i class="fa fa-home"></i>
+								<span class="nav-label">车辆控制管理</span>
+								<span class="fa arrow"></span>
+							</a>
+							<ul class="nav nav-second-level">
+								<li>
+									<a class="J_menuItem" href="control/struct/index.html">车辆控制指令</a>
+								</li>
+							</ul>
+						</li>
+
+						<li>
+							<a href="#">
+								<i class="fa fa-home"></i>
 								<span class="nav-label">监控管理</span>
 								<span class="fa arrow"></span>
 							</a>
 							<ul class="nav nav-second-level">
 								<li>
-									<a class="J_menuItem" href="monitor/state/index.html">车辆实时信息</a>
+									<a class="J_menuItem" href="monitor/register/index.html">TBox注册信息</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="monitor/state/index.html">车辆实时状态信息</a>
+								</li>
+								<li>
+									<a class="J_menuItem" href="monitor/can/index.html">车辆实时CAN信息</a>
 								</li>
 							</ul>
 						</li>
