--- a/vc-web/vc-web-front/src/main/resources/public/monitor/state/detail.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/state/detail.html
@@ -56,7 +56,7 @@
 					</dd>
 				</dl>
 				<dl  >
-					<dt>TBox时间：</dt>
+					<dt>报文时间：</dt>
 					<dd>
 					<input name="cssCurrentTime" class="form-control layer-date laydate-icon" placeholder="请选择" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 					</dd>
@@ -170,12 +170,6 @@
 					</dd>
 				</dl>
 				<dl  >
-					<dt>功耗：</dt>
-					<dd>
-					<input name="cssPowerConsumption" placeholder="请输入功耗" class="form-control" >
-					</dd>
-				</dl>
-				<dl  >
 					<dt>经度：</dt>
 					<dd>
 					<input name="cssLongitude" placeholder="请输入经度" class="form-control" >
@@ -263,7 +257,9 @@
 					<dd>
 					<select class="form-control m-b" name="cssSaving"  >
                          <option></option>
-                         <option value="">0无效</option>
+                         <option value="2">极度省电</option>
+                         <option value="1">最佳省电</option>
+                         <option value="0">标准模式</option>
                     </select>
 					</dd>
 				</dl>
@@ -278,9 +274,7 @@
 					<dd>
 					<select class="form-control m-b" name="cssEngine"  >
                          <option></option>
-                         <option value="2">极度省电</option>
-                         <option value="1">最佳省电</option>
-                         <option value="0">标准模式</option>
+                         <option value="">0无效</option>
                     </select>
 					</dd>
 				</dl>
